[package]
name = "wayback-archiver"
version = "0.1.1"
edition = "2018"
authors = ["Ben Congdon <ben@congdon.dev>"]
license = "MIT"
description = "CLI tool for archiving URLs to the Internet Archive's \"Wayback Machine\""
repository = "https://github.com/bcongdon/wayback-archiver"
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.0.14", features = ["derive"] }
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4.19", features = ["serde"] }
serde_json = "1"
indicatif = "0.16.2"
crossbeam-channel = "0.5.1"
lazy_static = "1.4.0"
regex = "1"
