[package]
name = "wayback-archiver"
version = "0.1.3"
edition = "2018"
authors = ["Ben Congdon <ben@congdon.dev>"]
license = "MIT"
description = "CLI tool for archiving URLs to the Internet Archive's \"Wayback Machine\""
repository = "https://github.com/bcongdon/wayback-archiver"
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.1", features = ["derive"] }
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4.23", features = ["serde"] }
serde_json = "1"
indicatif = "0.17.3"
crossbeam-channel = "0.5.6"
lazy_static = "1.4.0"
regex = "1"
